--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "private": true,
   "homepage": "https://zaims-constant.firebaseapp.com",
   "dependencies": {
-    "@material-ui/core": "^4.5.0",
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.5.0",
     "classnames": "^2.2.6",
+    "firebase": "^7.9.3",
     "gh-pages": "^2.1.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "react-virtualized": "^9.21.2"
   },
   "scripts": {
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d build",
+    "deploy": "react-scripts build && firebase deploy",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
