--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.5.0",
+    "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "firebase": "^7.9.3",
     "gh-pages": "^2.1.1",
+    "querystring": "^0.2.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
